--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=file://C:/Yezdi/StudyProjects/SpringBootWithMicroServices/Code/git-local-config-repo
+spring.cloud.config.server.git.uri=https://github.com/deepannr/spring-boot-cloud-microservices
+spring.cloud.config.server.git.username=deepannr
+spring.cloud.config.server.git.password=DeeGit2026
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.searchPaths=git-config-repo
