--- a/limits-service/src/main/resources/bootstrap.properties
+++ b/limits-service/src/main/resources/bootstrap.properties
@@ -2,3 +2,4 @@ spring.application.name=limits-service
 spring.cloud.config.uri=http://localhost:8888/
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.profiles.active=dv
+management.endpoints.web.exposure.include=*
